--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "sass": "^1.51.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon src/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.18.1",
+        "sass": "^1.51.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.16"
+    }
 }
