--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon src/index.js"
+        "clean": "rm -rf build && mkdir build",
+        "build-babel": "babel ./src -d ./build/src",
+        "build": "npm run clean && npm run build-babel",
+        "production": "npm run build && node ./build/src/index.js",
+        "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/runtime": "^7.17.9",
+        "babel-plugin-module-resolver": "^4.1.0",
         "express": "^4.18.1",
         "sass": "^1.51.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.17.10",
+        "@babel/core": "^7.17.10",
+        "@babel/node": "^7.17.10",
+        "@babel/plugin-transform-runtime": "^7.17.10",
+        "@babel/preset-env": "^7.17.10",
         "nodemon": "^2.0.16"
     }
 }
