--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dependencies": {
         "@babel/runtime": "^7.17.9",
         "babel-plugin-module-resolver": "^4.1.0",
+        "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "mongodb": "^4.5.0",
         "sass": "^1.51.0"
     },
     "devDependencies": {
