--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "babel-plugin-module-resolver": "^4.1.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "joi": "^17.6.0",
         "mongodb": "^4.5.0",
         "sass": "^1.51.0"
     },
